--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Rodolfo Bortoluzzi</title>
+	<title>Rodolfo Lucas Bortoluzzi</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Repl.it_logo.svg/220px-Repl.it_logo.png">
@@ -21,15 +21,17 @@
 		<!--────────────────Header───────────────-->
 		<header>
 			<a class="logo" href="#home">
-				<img src="https://newsletter-images--timmy-i-chen.repl.co/logo-light.png" alt="repl logo" />
+				<!--<img src="https://newsletter-images--timmy-i-chen.repl.co/logo-light.png" alt="repl logo" /> !-->
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
-			<li><a class="nav-link active" href="#home">Home</a></li>
+		 	<li><a class="nav-link active" target="_blank"  href="https://bortoluzzi.services">BCE - Consultoria</a></li>
+			<li><a class="nav-link" target="_blanck" href="https://www.rlbpc.me">Meu Blog</a></li>
+			<li><a class="nav-link" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
 		 </ul>
-			
+		
 			<div class="hamburger">
 				<div class="line1"></div>
             <div class="line2"></div>
@@ -42,7 +44,8 @@
 	  <div id="home">
 		 <div class="filter"></div>
 		 <section class="intro">
-		  <h3>Rodolfo Lucas Bortoluzzi<hr></h3>
+
+		  <h3><br>Rodolfo Lucas Bortoluzzi<hr></h3>
 		  <p>Químico Tecnológico - UFSC</p>
 		  <p>Administrador de Empresas - FUCAP</p>
 		  <p>Engenheiro de Produção - FUCAP</p>
@@ -51,52 +54,53 @@
 		  <!--────social media links─────-->
 			 
 		  <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
-			  <!--<a href="#" target="_blank"><i class='fab fa-twitter'></i></a>--> 
-			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <!--<a href="#" target="_blank"><i class='fab fa-codepen'></i></a>-->
+			  <!--<a href="#" ="_blank"><i class='fab fa-twitter'></i></a>--> 
+			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
+			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
+			  <a href="https://www.youtube.com/channel/UCdN_ScxdBG8PiYj-hdodAyQ" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
 			 
 		 </section> 
 	  </div>  
 		
 	  <!--───────────────Projects───────────────-->
-	  <div id="projects"> 
-		 <h3>My Projects.<hr></h3>
+	  <div id="projects">
+		 <h3>Meus Projetos<hr></h3>
 		  <p>Here are some of my projects, you may like.</p>
+		  <p>Aqui estão alguns dos meus projetos, você pode gostar.</p>
 		  <div class="work-box">
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1518611507436-f9221403cca2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1225&q=80">
+			    <img class="work-img" src="resources/artificial-intelligence-3382507_640.jpg">
 			    <a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+				<div class="work-content">Machine Learning</div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1462642109801-4ac2971a3a51?ixlib=rb-1.2.1&auto=format&fit=crop&w=1266&q=80">
+			    <img class="work-img" src="resources/3d printing.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+				<div class="work-content">Impressão 3D</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1485815457792-d1a966f9bde0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+			    <img class="work-img" src="resources/lab virtuais.jpg">
+				<a href="https://www.fucap.edu.br/labvirtual/" target="_blank"> <!--Link to project-->
+				<div class="work-content">Laboratórios Virtuais</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1517842645767-c639042777db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+			    <img class="work-img" src="resources/cálculos de engenharia.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+				<div class="work-content">Cálculos de Engenharia</div></a>
             </div> 
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1535556116002-6281ff3e9f36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=781&q=80">
+			    <img class="work-img" src="resources/code-1076536_640.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+				<div class="work-content">Desenvolvimento de Softwares</div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1483546416237-76fd26bbcdd1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+			    <img class="work-img" src="resources/essential-oils-3456303_640.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+				<div class="work-content">Óleos Essenciais</div></a>
             </div> 	  
 		  </div>
 		  </div>
@@ -107,18 +111,19 @@
 		  <!--────social media links─────-->
 		   <h3>Contact.<hr></h3>
 		   <p>Feel free to contact me on my social media.</p>
+		   <p>Sinta-se a votade para me contactar nas redes sociais.</p>
 		    <div class="social-media">
 			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <!--<a href="#" target="_blank"><i class='fab fa-twitter'></i></a>-->
 			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <a href="#" target="_blank"><i class="fa-youtube"></i></a>
 		    </div>
 		  </div>
 
 	</main>
 	  <footer class="copyright">© 2020 
-		  <a href="https://repl.it/@lilykhan" target="_blank"> Lilykhan.</a>
+		  <a href="https://repl.it/@RodolfoBortoluz" target="_blank">Rodolfo Bortoluzzi</a>
      </footer>
 	  
   </div>
