--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
 
 <body>
 
+	
+
 	<div class="container">
 
 		<!--────────────────Header───────────────-->
 		<header>
 			<a class="logo" href="#home">
-				<!--<img src="https://newsletter-images--timmy-i-chen.repl.co/logo-light.png" alt="repl logo" /> !-->
-		</a>
+			 
 		<nav>	
-		 <ul class="nav-bar"><div class="bg"></div>
-		 	<li><a class="nav-link active" target="_blank"  href="https://bortoluzzi.services">BCE - Consultoria</a></li>
-			<li><a class="nav-link" target="_blanck" href="https://www.rlbpc.me">Meu Blog</a></li>
+		 <ul class="nav-bar">
+			<!--<div class="bg"></div>!-->
+		 	<li><a class="nav-link" target="_blank"  href="https://bortoluzzi.services"><img src="resources/logo.jpg" alt="Bortoluzzi Consultoria" width="100" height="50" /></a></li>
+			<li><a class="nav-link" target="_blank" href="https://www.rlbpc.me">Blog</a></li>
 			<li><a class="nav-link" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
+		 	<li><a class="nav-link" <form><input type="text" name="username" /> Usuário </form></a></li>
+		 	<li><a class="nav-link" <form><input type="password" name="password"/> Senha </form></a></li>
 		 </ul>
 		
 			<div class="hamburger">
