--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			  <!--<a href="#" ="_blank"><i class='fab fa-twitter'></i></a>--> 
 			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="https://www.youtube.com/channel/UCdN_ScxdBG8PiYj-hdodAyQ" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
 			 
 		 </section> 
@@ -117,11 +117,12 @@
 		   <p>Feel free to contact me on my social media.</p>
 		   <p>Sinta-se a votade para me contactar nas redes sociais.</p>
 		    <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
+			  <!--<a href="#" target="_blank"><i class='fab fa-codepen'></i></a>-->
 			  <!--<a href="#" target="_blank"><i class='fab fa-twitter'></i></a>-->
-			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="#" target="_blank"><i class="fa-youtube"></i></a>
+			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
+			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
+			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
+			  
 		    </div>
 		  </div>
 
