Melhorando aparência e implantando controle de login

--- a/MachineLearning.html
+++ b/MachineLearning.html
@@ -26,8 +26,8 @@
 			 
 		<nav>	
 		 <ul class="nav-bar">
-			<!--<div class="bg"></div>!-->
-		 	<li><a class="nav-link" target="_blank"  href="https://bortoluzzi.services"><img src="resources/logo.jpg" alt="Bortoluzzi Consultoria" width="100" height="50" /></a></li>
+			<!--<div class="bg"></div>-->
+		 	<li><a class="nav-link" href="https://bortoluzzi.services"><img src="resources/logo.jpg" alt="Bortoluzzi Consultoria" width="100" height="50" /></a></li>
 			<li><a class="nav-link" target="_blank" href="https://www.rlbpc.me">Blog</a></li>
 			<li><a class="nav-link" href="index.html">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
