--- a/DesenvolvimentoSoftware.html
+++ b/DesenvolvimentoSoftware.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Machine Learning</title>
+	<title>Desenvolvimento de Software</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="icon" href="resources/logo.jpg">
@@ -21,50 +21,13 @@
 
 		
 	<main>
-		<!--─────────────────Home────────────────-->
-	  <div id="home">
-		 <div class="filter"></div>
-		 <div id="projects">
-		 <h3>Meus Projetos<hr></h3>
-		  <p>Here are some of my projects, you may like.</p>
-		  <p>Aqui estão alguns dos meus projetos, você pode gostar.</p>
-		  <div class="work-box">
-		  <div class="work">
-		<!--───────────────card───────────────-->
+		
 			<div class="card">
 			    <img class="work-img" src="resources/artificial-intelligence-3382507_640.jpg">
 			    <a href="MachineLearning.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Machine Learning</div></a>
             </div>
-			<div class="card">
-			    <img class="work-img" src="resources/3d printing.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Impressão 3D</div></a>
-            </div>
-            <div class="card">
-			    <img class="work-img" src="resources/lab virtuais.jpg">
-				<a href="https://www.fucap.edu.br/labvirtual/" target="_blank"> <!--Link to project-->
-				<div class="work-content">Laboratórios Virtuais</div></a>
-            </div>
-            <div class="card">
-			    <img class="work-img" src="resources/cálculos de engenharia.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Cálculos de Engenharia</div></a>
-            </div> 
-			<div class="card">
-			    <img class="work-img" src="resources/code-1076536_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Desenvolvimento de Softwares</div></a>
-            </div>
-			<div class="card">
-			    <img class="work-img" src="resources/essential-oils-3456303_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Óleos Essenciais</div></a>
-            </div> 	  
-		  </div>
-		  </div>
-	  </div>
-	  </div>  
+		    
 		
 	  <!--───────────────Projects───────────────-->
 	  
