Incluindo linguagens de programação

--- a/DesenvolvimentoSoftware.html
+++ b/DesenvolvimentoSoftware.html
@@ -36,6 +36,7 @@
 	  <div id="contact">
 		  <!--────social media links─────-->
 		   <h3>Contatos<hr></h3>
+<img src="https://cdn.jsdelivr.net/npm/programming-languages-logos/src/javascript/javascript.png" height="100">	   
 		   <p>Feel free to contact me on my social media.</p>
 		   <p>Sinta-se a votade para me contactar nas redes sociais.</p>
 		    <div class="social-media">
