--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="icon" href="resources/logo.jpg">
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 	</script>
 	<script src="script.js">
@@ -75,32 +76,32 @@
 		<!--───────────────card───────────────-->
 			<div class="card">
 			    <img class="work-img" src="resources/artificial-intelligence-3382507_640.jpg">
-			    <a href="MachineLearning.html" target="_blank"> <!--Link to project-->
+			    <a href="https://www.robo.place/#MachineLearning.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Machine Learning</div></a>
             </div>
 			<div class="card">
 			    <img class="work-img" src="resources/3d printing.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#Impressao3D.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Impressão 3D</div></a>
             </div>
             <div class="card">
 			    <img class="work-img" src="resources/lab virtuais.jpg">
-				<a href="https://www.fucap.edu.br/labvirtual/" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#LabsVirtuais.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Laboratórios Virtuais</div></a>
             </div>
             <div class="card">
 			    <img class="work-img" src="resources/cálculos de engenharia.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#CalcEngenharia.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Cálculos de Engenharia</div></a>
             </div> 
 			<div class="card">
 			    <img class="work-img" src="resources/code-1076536_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#MachineLearning.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Desenvolvimento de Softwares</div></a>
             </div>
 			<div class="card">
 			    <img class="work-img" src="resources/essential-oils-3456303_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#OleosEssenciais.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Óleos Essenciais</div></a>
             </div> 	  
 		  </div>
