--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div> 
 			<div class="card">
 			    <img class="work-img" src="resources/code-1076536_640.jpg">
-				<a href="https://www.robo.place/#MachineLearning.html" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#DesenvolvimentoSoftware.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Desenvolvimento de Softwares</div></a>
             </div>
 			<div class="card">
