--- a/OleosEssenciais.html
+++ b/OleosEssenciais.html
@@ -16,73 +16,18 @@
 
 
 <body>
+	<form action="welcome_get.php" method="get">
+	Name: <input type="text" name="name"><br>
+	E-mail: <input type="text" name="email"><br>
+	<input type="submit">
+	</form>
+
 
 	<div class="container">
 
 		
 	<main>
-		<!--─────────────────Home────────────────-->
-	  <div id="home">
-		 <div class="filter"></div>
-		 <div id="projects">
-		 <h3>Óleos Essenciais<hr></h3>
-		  <p>Here are some of my projects, you may like.</p>
-		  <p>Aqui estão alguns dos meus projetos, você pode gostar.</p>
-		  <div class="work-box">
-		  <div class="work">
-		<!--───────────────card───────────────-->
-			<div class="card">
-			    <img class="work-img" src="resources/artificial-intelligence-3382507_640.jpg">
-			    <a href="MachineLearning.html" target="_blank"> <!--Link to project-->
-				<div class="work-content">Machine Learning</div></a>
-            </div>
-			<div class="card">
-			    <img class="work-img" src="resources/3d printing.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Impressão 3D</div></a>
-            </div>
-            <div class="card">
-			    <img class="work-img" src="resources/lab virtuais.jpg">
-				<a href="https://www.fucap.edu.br/labvirtual/" target="_blank"> <!--Link to project-->
-				<div class="work-content">Laboratórios Virtuais</div></a>
-            </div>
-            <div class="card">
-			    <img class="work-img" src="resources/cálculos de engenharia.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Cálculos de Engenharia</div></a>
-            </div> 
-			<div class="card">
-			    <img class="work-img" src="resources/code-1076536_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Desenvolvimento de Softwares</div></a>
-            </div>
-			<div class="card">
-			    <img class="work-img" src="resources/essential-oils-3456303_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Óleos Essenciais</div></a>
-            </div> 	  
-		  </div>
-		  </div>
-	  </div>
-	  </div>  
 		
-	  <!--───────────────Projects───────────────-->
-	  
-		 
-		<!--──────────────Contact────────────────-->
-	  <div id="contact">
-		  <!--────social media links─────-->
-		   <h3>Contatos<hr></h3>
-		   <p>Feel free to contact me on my social media.</p>
-		   <p>Sinta-se a votade para me contactar nas redes sociais.</p>
-		    <div class="social-media">
-			  <!--<a href="#" target="_blank"><i class='fab fa-codepen'></i></a>-->
-			  <!--<a href="#" target="_blank"><i class='fab fa-twitter'></i></a>-->
-			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
-			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
-		    </div>
-		  </div>
 	</main>
 	  <footer class="copyright">© 2020 
 		  <a href="https://repl.it/@RodolfoBortoluz" target="_blank">Rodolfo Bortoluzzi</a>
