Atualizando links e melhorando portfólio

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="icon" href="resources/logo.jpg">
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 	</script>
@@ -30,10 +28,7 @@
 			<li><a class="nav-link" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
-		 	<li><a class="nav-link" <form><input type="text" name="username" /> Usuário </form></a></li>
-		 	<li><a class="nav-link" <form><input type="password" name="password"/> Senha </form></a></li>
-			<li><a class="button" <button> Login </button></a></li> 
-		 </ul>
+		</ul>
 			<div class="hamburger">
 				<div class="line1"></div>
             <div class="line2"></div>
@@ -54,9 +49,8 @@
 		  <!--────social media links─────-->
 			 
 		  <div class="social-media">
-			  <!--<a href="#" target="_blank"><i class='fab fa-codepen'></i></a>-->
-			  <!--<a href="#" ="_blank"><i class='fab fa-twitter'></i></a>--> 
-			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
+			  <a href="https://www.rlbpc.me/" target="_blank"><i class='fab fa-blogger'></i></a>
+              <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
 			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
@@ -116,7 +110,7 @@
 		   <p>Sinta-se a votade para me contactar nas redes sociais.</p>
 		    <div class="social-media">
 			  <!--<a href="#" target="_blank"><i class='fab fa-codepen'></i></a>-->
-			  <!--<a href="#" target="_blank"><i class='fab fa-twitter'></i></a>-->
+			  <a href="https://www.rlbpc.me/" target="_blank"><i class='fab fa-blogger'></i></a>
 			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
 			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
