--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><a class="nav-link" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
+            
 		</ul>
 			<div class="hamburger">
 				<div class="line1"></div>
@@ -53,6 +54,7 @@
               <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
 			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
+              <a href="http://lattes.cnpq.br/3025724029603836" target="_blank"><i class='fas fa-graduation-cap'></i></a>
 		    </div>
 		  <div class="logotipo">
 			<a href="https://bortoluzzi.services"><img src="resources/logo.jpg" alt="Bortoluzzi Consultoria" width="330" height="200" /></a></li> 
@@ -114,6 +116,7 @@
 			  <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
 			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
+              <a href="http://lattes.cnpq.br/3025724029603836" target="_blank"><i class='fas fa-graduation-cap'></i></a>
 		    </div>
 		  </div>
 	</main>
