Improving all features

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="icon" href="resources/logo.jpg">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 	</script>
 	<script src="script.js">
 	</script>
@@ -22,8 +22,6 @@
 			<a class="logo" href="#home">
 		<nav>	
 		 <ul class="nav-bar">
-			<!--<div class="bg"></div>!-->
-		 	
 			<li><a class="nav-link" target="_blank" href="https://www.rlbpc.me">Blog</a></li>
 			<li><a class="nav-link" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
@@ -57,7 +55,7 @@
               <a href="http://lattes.cnpq.br/3025724029603836" target="_blank"><i class='fas fa-graduation-cap'></i></a>
 		    </div>
 		  <div class="logotipo">
-			<a href="https://bortoluzzi.services"><img src="resources/logo.jpg" alt="Bortoluzzi Consultoria" width="330" height="200" /></a></li> 
+			<a href="https://bortoluzzi.services"><img src="resources/logo.jpg" alt="Bortoluzzi Consultoria" width="280" height="160" /></a></li> 
 		  </div> 
 		 </section> 
 	  </div>  
@@ -87,17 +85,17 @@
             </div>
             <div class="card">
 			    <img class="work-img" src="resources/cálculos de engenharia.jpg">
-				<a href="https://www.robo.place/#CalcEngenharia.html" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#CalcEngenharia.html" target="_blank"> 
 				<div class="work-content">Cálculos de Engenharia</div></a>
             </div> 
 			<div class="card">
 			    <img class="work-img" src="resources/code-1076536_640.jpg">
-				<a href="https://www.robo.place/#DesenvolvimentoSoftware.html" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/DesenvolvimentoSoftware.html" target="_blank"> 
 				<div class="work-content">Desenvolvimento de Softwares</div></a>
             </div>
 			<div class="card">
 			    <img class="work-img" src="resources/essential-oils-3456303_640.jpg">
-				<a href="https://www.robo.place/#OleosEssenciais.html" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/#OleosEssenciais.html" target="_blank">
 				<div class="work-content">Óleos Essenciais</div></a>
             </div> 	  
 		  </div>
