melhorando design da página de desenvolvimento de software

--- a/ValidadorCartaoRuby.html
+++ b/ValidadorCartaoRuby.html
@@ -16,11 +16,35 @@
 
 
 <body>
+    <header>
+			<a class="logo" href="#home">
+		<nav>	
+		 <ul class="nav-bar">
+			<li><a class="nav-link" target="_blank" href="https://www.rlbpc.me">Blog</a></li>
+			<li><a class="nav-link" href="https://www.robo.place">Home</a></li>
+			<li><a class="nav-link" href="https://www.robo.place/#projects">Projects</a></li>
+			<li><a class="nav-link" href="https://www.robo.place/#contact">Contact</a></li>
+            
+		</ul>
+			<div class="hamburger">
+				<div class="line1"></div>
+            <div class="line2"></div>
+				<div class="line3"></div>
+			</div>
+		</nav>
+	</header>
 <div>
                  <h4>Validador de Números de Cartão de Crédito em Ruby</h4>
                     <a>O programa abaixo solicita o número de um cartão de crédito e verifica se é válido.</a>
                    <embed type="text/html" src="https://code.sololearn.com/cLHiytuVUUp3" width="100%" height="500px">
                     <br/>
-	
+</div>
+<div class="social-media">
+			  <a href="https://www.rlbpc.me/" target="_blank"><i class='fab fa-blogger'></i></a>
+              <a href="https://github.com/qmclouca" target="_blank"><i class='fab fa-github'></i></a>
+			  <a href="https://www.linkedin.com/in/rlbpc" target="_blank"><i class='fab fa-linkedin-in'></i></a>
+			  <a href="https://www.youtube.com/channel/UC8YlqyxmD-Nm1nzIE1d1MaQ/" target="_blank"><i class="fab fa-youtube"></i></a>
+              <a href="http://lattes.cnpq.br/3025724029603836" target="_blank"><i class='fas fa-graduation-cap'></i></a>
+		    </div>
   </body>
   </html>
