Incluindo Laboratório Química Inorgânica Descritiva

--- a/LabsVirtuais.html
+++ b/LabsVirtuais.html
@@ -32,35 +32,11 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="resources/artificial-intelligence-3382507_640.jpg">
-			    <a href="MachineLearning.html" target="_blank"> <!--Link to project-->
-				<div class="work-content">Machine Learning</div></a>
+			    <img class="work-img" src="resources/periodic-system-3962844_640.jpg">
+			    <a href="../Pages/Labs/PeriodicTable/PeriodicTable.html" target="_blank"> <!--Link to project-->
+				<div class="work-content">Química Inorgânica Descritiva</div></a>
             </div>
-			<div class="card">
-			    <img class="work-img" src="resources/3d printing.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Impressão 3D</div></a>
-            </div>
-            <div class="card">
-			    <img class="work-img" src="resources/lab virtuais.jpg">
-				<a href="https://www.fucap.edu.br/labvirtual/" target="_blank"> <!--Link to project-->
-				<div class="work-content">Laboratórios Virtuais</div></a>
-            </div>
-            <div class="card">
-			    <img class="work-img" src="resources/cálculos de engenharia.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Cálculos de Engenharia</div></a>
-            </div> 
-			<div class="card">
-			    <img class="work-img" src="resources/code-1076536_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Desenvolvimento de Softwares</div></a>
-            </div>
-			<div class="card">
-			    <img class="work-img" src="resources/essential-oils-3456303_640.jpg">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Óleos Essenciais</div></a>
-            </div> 	  
+			
 		  </div>
 		  </div>
 	  </div>
