--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="card">
 			    <img class="work-img" src="resources/lab virtuais.jpg">
-				<a href="https://www.robo.place/#LabsVirtuais.html" target="_blank"> <!--Link to project-->
+				<a href="https://www.robo.place/LabsVirtuais.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Laboratórios Virtuais</div></a>
             </div>
             <div class="card">
