--- a/Pages/Labs/PeriodicTable/PeriodicTable.html
+++ b/Pages/Labs/PeriodicTable/PeriodicTable.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <link rel="stylesheet" type="text/css" href="Pages/Labs/PeriodicTable/style.css" />
+        <script src="Pages/Labs/PeriodicTable/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        <script src="http://jquery-pte.googlecode.com/files/jquery.pte.min.js"></script>
   </head>
 
   <body>
@@ -8,10 +12,10 @@
       <a class="logo" href="#home">
         <nav>	
           <ul class="nav-bar">
-            <li><a class="nav-link" target="_blank" href="https://www.rlbpc.me">Blog</a></li>
-			<li><a class="nav-link" href="#home">Home</a></li>
-			<li><a class="nav-link" href="#projects">Projects</a></li>
-			<li><a class="nav-link" href="#contact">Contact</a></li>
+           <li><a class="nav-link" target="_blank" href="https://www.rlbpc.me">Blog</a></li>
+			<li><a class="nav-link" href="https://www.robo.place">Home</a></li>
+			<li><a class="nav-link" href="https://www.robo.place/#projects">Projects</a></li>
+			<li><a class="nav-link" href="https://www.robo.place/#contact">Contact</a></li>
           </ul>
 			<div class="hamburger">
 				<div class="line1"></div>
@@ -20,5 +24,12 @@
 			</div>
 		</nav>
     </header>
+
+   <div id="my_periodic"></div>
+        <script>
+            $('#my_periodic').pte({ data : 'jquery.pte.json', config : {tooltip:true} });
+        </script>
   </body>
 </html>
+
+
