--- a/LabsVirtuais.html
+++ b/LabsVirtuais.html
@@ -58,7 +58,12 @@
 		    <div class="card">
 			    <img class="work-img" src="resources/periodic-system-3962844_640.jpg">
 				<a href="https://www.robo.place/Pages/Labs/PeriodicTable/PeriodicTable.html" target="_blank"> <!--Link to project-->
-				<div class="work-content">Elementos</div></a>
+				<div class="work-content">Tabela Periódica</div></a>
+            </div>
+            <div class="card">
+			    <img class="work-img" src="resources/craftsmen-3094035_640.jpg">
+				<a href="https://www.robo.place/Pages/Labs/DoItYourself/DIY.html" target="_blank"> <!--Link to project-->
+				<div class="work-content">DIY</div></a>
             </div>
              
 		  </div>
