tabela periódoca funcionando

--- a/Labs/PeriodicTable/PeriodicTable.html
+++ b/Labs/PeriodicTable/PeriodicTable.html
@@ -46,7 +46,8 @@
 		<section class="intro">
 		<h3><br>Elementos<hr></h3>       
         <iframe src="/Labs/PeriodicTable/Table.html" class="periodic-table"></iframe>
-        <iframe src="/Labs/PeriodicTable/Element.html" class="element-ilustration"></iframe>
+        <!--<div class ="card"><iframe src="/Labs/PeriodicTable/Element.html" class="element-ilustration"></iframe></div>-->
+        
 		  <!--────social media links─────-->
 			 
 		  <div class="social-media">
